changed the position of func to the right

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
      <!-- Menu déroulant pour la status -->
     <label for="status">Status:</label>
     <select id="status">
-        <option value="">--Sélectionner un status--</option>
+        <opt ion value="">--Sélectionner un status--</opt>
     </select>
     <!-- Menu déroulant pour la consistance -->
     <label for="consistance">Consistance :</label>
