added a home button

--- a/index.html
+++ b/index.html
@@ -12,8 +12,14 @@
     <link rel="stylesheet" href="/lib/Leaflet.Pancontrol-master/src/L.Control.Pan.css">
     <!-- leaflet fullscreen css -->
     <link rel="stylesheet" href="/lib/leaflet.fullscreen-master/Control.FullScreen.css">
-    <!-- leaflet ruler css-->
+    <!-- leaflet ruler css -->
     <link rel="stylesheet" href="/lib/leaflet-ruler-master/src/leaflet-ruler.css">
+    <!-- cnd font-awesome css-->
+    <link 
+	  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.css" 
+	  rel="stylesheet"  type='text/css'>
+      <!-- easybutton css-->
+       <link rel="stylesheet" href="/lib/Leaflet.EasyButton-master/src/easy-button.css">
      <!-- custom style css -->
   <link rel="stylesheet" href="css/map_styles.css">
 
@@ -99,6 +105,9 @@
   <script src="/lib/leaflet-ruler-master/src/leaflet-ruler.js"></script>
   <!-- leaflet fullscreen js -->
   <script src="/lib/leaflet.fullscreen-master/Control.FullScreen.js"></script>
+<!-- easybutton js -->
+<script src="/lib/Leaflet.EasyButton-master/src/easy-button.js"></script>
+  <!-- custom js -->
   <script src="js/main.js"></script>
  
 
